# signature-verification

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
app/: main.py
app/constants/: __init__.py  constants.py
app/detector/: __init__.py  detector.py
app/engine/cleaner/: __init__.py  cleaner.py
app/engine/detector/: __init__.py  detector.py
app/engine/verifier/: __init__.py  verifier.py
app/models/: architectures.py  cleaner.pt
app/routers/: extract.py  signature.py
app/utils/: commons.py
app/verifier/: __init__.py  model_architecture.py  verifier.py
