[tool.poetry]
name = "app"
version = "0.1.0"
description = "Package to detect, clean and verify signatures"
authors = ["Saurav Shrestha <saurastha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "~=8.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.4"
black = "~=23.12"
isort = "~=5.13"
flake8 = "~=7.0"
mypy = "~=1.8"

[tool.poetry.group.docs.dependencies]
sphinx = "~=7.2"

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
